# Paris-bike-pulse

./: .env.example  .gitignore  README.md  pyproject.toml
src/paris_bike_pulse/: __init__.py
src/paris_bike_pulse/config/: __init__.py  settings.py
src/paris_bike_pulse/ingestion/: __init__.py  bicycle.py  weather.py
src/paris_bike_pulse/utils/: __init__.py  logging.py
tests/fixtures/: bicycle_api_page.json  weather_api_response.json
tests/unit/: test_bicycle_client.py  test_bicycle_ingestion.py  test_bicycle_response.py  test_logging.py  test_settings.py  test_weather_client.py  test_weather_ingestion.py  test_weather_response.py
