[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "paris-bike-pulse"
version = "0.1.0"
description = "Data engineering and forecasting project for Paris bicycle traffic"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-dotenv>=1.0,<2",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "ruff>=0.9,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
docstring-code-format = true
